# adib-lang

./: .gitignore  Cargo.toml  README.md
examples/: two_sum.adib
src/: eval.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  std_functions.rs
src/parser/: mod.rs  parse_array.rs  parse_identifier.rs  parse_if.rs  parse_keyword.rs  parse_number.rs  parse_object.rs  parse_operator.rs  parse_string.rs
