[package]
name = "adib-lang"
version = "0.1.0"
edition = "2021"
authors = ["Adib Fahimi <adibfahi@gmail.com>"]

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.63"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]
